force-app/main/default/objects/Related_Contract_Parties__c/Related_Contract_Parties__c.object-meta.xml
<CustomObject>
    <description>Junction object between Contract and Account.</description>
    <label>Related Contract Parties</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Related Contract Parties Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Contract Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>