force-app/main/default/objects/Related_Contract_Parties__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to the account object.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Contracts</relationshipLabel>
    <relationshipName>Account_Related_Contract_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>