force-app/main/default/objects/Related_Contract_Parties__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to the contract object.</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Related Parties</relationshipLabel>
    <relationshipName>Related_Contract_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>