force-app/main/default/objects/Related_Contract_Parties__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Client Approval</fullName>
                
                
                    <label>Client Approval</label>
                
                </value>
            
                <value>
                
                    <fullName>Sales Partner Notification</fullName>
                
                
                    <label>Sales Partner Notification</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>